# rsq_aws

./: .clineignore  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
cline_docs/: ZZZ_OLD_customInstructions.md  customInstructions.md  pythonRules.md
rsq_aws/: __init__.py
rsq_aws/redshift/: boto_connection.py  psycopg_connection.py
rsq_aws/redshift/_private/: _helpers.py
rsq_aws/s3/: s3.py
src/rsq_aws/: __init__.py
src/rsq_aws/redshift/: boto_connection.py  psycopg_connection.py
src/rsq_aws/redshift/_private/: _helpers.py  _interfaces.py
src/rsq_aws/redshift/core/: boto_connection.py  credentials.py  psycopg_connection.py
src/rsq_aws/s3/: path_factory.py
src/rsq_aws/s3/core/: path_factory.py  s3.py
tests/integration_tests/redshift/: test_boto_connection_integration.py  test_helpers_integration.py  test_psycopg_connection_integration.py
tests/integration_tests/s3/: test_s3_integration.py
tests/redshift/: test_boto_connection.py  test_psycopg_connection.py
tests/redshift/_private/: test_helpers.py
tests/redshift/core/: test_boto_connection.py  test_credentials.py  test_psycopg_connection.py
tests/s3/: test_path_factory.py  test_s3.py  test_s3_integration.py
tests/s3/core/: test_path_factory.py  test_s3.py  test_s3_integration.py
tests/unit_tests/redshift/: test_boto_connection.py  test_helpers.py  test_psycopg_connection.py
tests/unit_tests/s3/: test_path_factory.py  test_s3.py
