[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsq-aws"
version = "1.0.0"
description = "A comprehensive Python library for AWS services"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]

dependencies = [
    "boto3>=1.36.21",
    "botocore>=1.36.21",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pyarrow>=19.0.0",
    "python-dotenv>=1.0.1",
    "s3transfer>=0.11.2",
    "urllib3>=2.3.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "tzdata>=2025.1",
    "numpy>=2.2.3",
    "jmespath>=1.0.1",
    "six>=1.17.0",
    "rsq-utils @ git+https://github.com/rsq230798/rsq_utils.git@4d04c9b2a311aedc85b1b5f072be426475eb80a3"
]

[project.optional-dependencies]
dev = [
    "pandas-stubs>=2.2.3.241126",
    "types-pytz>=2025.1.0.20250204",
    "colorama>=0.4.6",
    "psutil>=7.0.0",
    "mypy>=1.15.0",
    "mypy-extensions>=1.0.0",
    "pytest>=8.3.4",
    "exceptiongroup>=1.2.2",
    "iniconfig>=2.0.0",
    "packaging>=24.2",
    "pathlib>=1.0.1",
    "pluggy>=1.5.0",
    "tomli>=2.2.1",
    "typing_extensions>=4.12.2"
]

[project.urls]
Homepage = "https://github.com/rsq230798/rsq_aws"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
